--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Tell Me How You Feel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/journal.css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">    
 </head>
 <body class = dailyJournal>
 
@@ -52,8 +52,17 @@
 
     </fieldset>
 
-    <button class = journalButton type="button"> REC </button>
+            <button class = 'journalButton' type="button"> REC </button>
 
-    
+    <article class = 'entryLog'>
+
+
+
+    </article>
+       
+  
+
+
+<script src="scripts/journal.js"></script>
 </body>
 </html>
