a little more work with the button and css

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
                     <option dailyJournal--option value="selectMood"> Cloud 9! </option>
                     <option dailyJournal--option value="selectMood"> Extremely frusterated! </option>
                     <option dailyJournal--option value="selectMood"> Solid day </option>
+                    <option dailyJournal--option value="selectMood"> 😂 </option>
 
             </select>
 
